--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -201,26 +201,30 @@ const answer = sum(2, 4);
 
 ## Creating minimal reproductions
 
-When you encounter a bug in Astro, it's most helpful to create a minimal reproduction of the issue. This helps us to understand the context, quickly identify the problem, and fix it.
+When troubleshooting your code, it can be helpful to create a **minimal reproduction** of the issue that you can share. This is a smaller, simplified Astro project that demonstrates your issue. Having a working reproduction in a new project helps to confirm that this is a repeatable problem, and is not caused by something else in your personal environment or existing project.
 
-A minimal reproduction should be a simplified version of the code that reliably demonstrates the issue.
+Sharing a minimal reproduction is helpful when asking for help in our support threads is often required when filing a bug report to Astro.
 
 ### Create a StackBlitz via [astro.new](https://astro.new)
 
-You can use [astro.new](https://astro.new) to create a new Astro project with a single click. For minimal reproductions, we recommend the minimal (empty) example, so you can isolate the issue.
+You can use [astro.new](https://astro.new) to create a new Astro project with a single click. For minimal reproductions, we strongly recommend starting from the minimal (empty) example running in [StackBlitz](https://stackblitz.com), with as little extra code as possible.
 
-We ask you to use [StackBlitz](https://stackblitz.com) because it allows us to quickly reproduce your issue without setting up a local environment. With a GitHub repository, we would have to clone it, install dependencies, and run it locally, which can introduce more issues.
-You might not be able to reproduce your issue in StackBlitz. For example, your issue might be dependent on a specific environment or package manager, or it may involve HTML Streaming, which isn't supported in StackBlitz. In this case, create a new Astro project using the CLI, reproduce the issue, and upload it to a GitHub repository. Then, link that in the issue.
+StackBlitz will run this Astro project in the browser, outside of your local environment. It will also provide you with a shareable link so that any Astro maintainer or support squad member can view your minimal reproduction outside of their own local environment. This means that everyone is viewing the exact same project, with the same configuration and dependencies. This makes it easy for someone else to help troubleshoot your code. If the issue is reproducable, it allows you to verify that the issue lies within the Astro code itself and you can feel confident submitting a bug report.
+
+Note that not every issue is reproducable in StackBlitz. For example, your issue might be dependent on a specific environment or package manager, or it may involve HTML Streaming, which isn't supported in StackBlitz. In this case, create a new minimal (empty) Astro project using the CLI, reproduce the issue, and upload it to a GitHub repository. Instead of sharing a StackBlitz URL, provide a link to the GitHub repository of your minimal reproduction.
 ### Minimal code
 
 Once your empty project is set up, go through the steps to reproduce the issue. This can include adding packages, changing configuration, and writing code.
-You should only add the minimum amount of code necessary to reproduce the issue. This means that you should remove all code that is not directly related to the issue.
 
-### Create your issue
+You should only add the minimum amount of code necessary to reproduce the issue. Do not reproduce other elements of your existing project, and remove all code that is not directly related to the issue. 
 
-In most of Astro's repositories you'll find issue templates that will guide you on how to write good issues. It's important that you follow these templates so we don't have to go back and forth with you to get the information we need to solve the issue.
+### Create an issue
 
-Share the link to your StackBlitz with us in your opened issue. Additionally, include clear, step-by-step instructions on how to replicate the issue and a description of the expected and actual behavior.
+If your issue can be reproduced, then it is time to create an issue and file a bug report!
+
+Go to the appropriate Astro repository on GitHub and open a new issue. Most repositories have an issue template that will ask questions or require information in order to submit. It's important that you follow these templates because if you don't provide the information we need, then we have to ask you for it... and no one is working on your issue!
+
+Include the link to your minimal reproduction on StackBlitz (or GitHub repository, if necessary). Start with a description of the expected versus actual behavior to provide context for the issue. Then, include clear, step-by-step instructions on how to replicate the issue in an Astro project.
 
 ## Need more?
 
