--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -203,7 +203,7 @@ const answer = sum(2, 4);
 
 When troubleshooting your code, it can be helpful to create a **minimal reproduction** of the issue that you can share. This is a smaller, simplified Astro project that demonstrates your issue. Having a working reproduction in a new project helps to confirm that this is a repeatable problem, and is not caused by something else in your personal environment or existing project.
 
-Sharing a minimal reproduction is helpful when asking for help in our support threads is often required when filing a bug report to Astro.
+Sharing a minimal reproduction is helpful when asking for help in our support threads and is often required when filing a bug report to Astro.
 
 ### Create a StackBlitz via [astro.new](https://astro.new)
 
