Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/3-components/3.mdx
+++ b/src/content/docs/es/tutorial/3-components/3.mdx
@@ -1,6 +1,6 @@
 ---
 type: tutorial
-title: Constrúyalo usted mismo - Header
+title: Constrúyelo tu mismo - Header
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
@@ -16,19 +16,19 @@ import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
-Dado que su sitio se verá en distintos dispositivos, creemos una navegación de página que pueda responder a múltiples tamaños de pantalla.
+Dado que tu sitio se verá en distintos dispositivos, creemos una navegación de página que pueda responder a múltiples tamaños de pantalla.
 
 <PreCheck>
-  - Cree un header para su sitio que contenga el componente de navegación
-  - Hacer que el componente de navegación sea responsive
+  - Crea un header para tu sitio que contenga el componente de navegación
+  - Hacer que el componente de navegación sea responsivo
 </PreCheck>
 
 
 <Box icon="puzzle-piece">
 
-## Pruébelo usted mismo - Cree un nuevo componente Header
+## Pruébalo tu mismo - Crea un nuevo componente Header
 
-1. Cree un nuevo componente header. Importe y utilice su componente existente `Navigation.astro` dentro de un elemento `<nav>` que esté dentro de un elemento `<header>`.
+1. Crea un nuevo componente header. Importe y utiliza tu componente existente `Navigation.astro` dentro de un elemento `<nav>` que esté dentro de un elemento `<header>`.
 
     <details>
     <summary>¡Enséñame el código!</summary>
@@ -54,9 +54,9 @@ Dado que su sitio se verá en distintos dispositivos, creemos una navegación de
 
 <Box icon="check-list">
 
-## Pruébelo usted mismo - Actualice sus páginas
+## Pruébalo tu mismo - Actualiza tus páginas
 
-1. En cada página, sustituya el componente `<Navigation/>` existente por su nuevo header.
+1. En cada página, sustituye el componente `<Navigation/>` existente por tu nuevo header.
 
     <details>
     <summary>¡Enséñame el código!</summary>
@@ -91,7 +91,7 @@ Dado que su sitio se verá en distintos dispositivos, creemos una navegación de
 
 </Box>
 
-## Añadir estilos responsive
+## Añadir estilos responsivos
 
 1. Actualiza `Navigation.astro` con la clase CSS para controlar tus enlaces de navegación. Envuelve los enlaces de navegación existentes en un `<div>` con la clase `nav-links`.
 
@@ -105,14 +105,14 @@ Dado que su sitio se verá en distintos dispositivos, creemos una navegación de
     </div>
     ```
 
-2. Copie los siguientes estilos CSS en `global.css`. Estos estilos:
+2. Copia los siguientes estilos CSS en `global.css`. Estos estilos:
 
     - Estilo y posición de los enlaces de navegación para móviles
     - Incluir una clase `expanded` que pueda activarse para mostrar u ocultar los enlaces en móviles.
-    - Utilice `@media` queries para definir estilos diferentes para tamaños de pantalla mayores.
+    - Utiliza `@media` queries para definir estilos diferentes para tamaños de pantalla mayores.
 
     :::tip[diseño mobile-first]
-    Empiece por definir qué debe ocurrir en las pantallas pequeñas. Las pantallas pequeñas requieren layouts más sencillos. A continuación, ajuste sus estilos para adaptarse a dispositivos más grandes. Si diseñas primero el caso complicado, luego tendrás que trabajar para intentar hacerlo sencillo de nuevo.
+    Empieza por definir qué debe ocurrir en las pantallas pequeñas. Las pantallas pequeñas requieren layouts más sencillos. A continuación, ajusta tus estilos para adaptarse a dispositivos más grandes. Si diseñas primero el caso complicado, luego tendrás que trabajar para intentar hacerlo sencillo de nuevo.
     :::
 
     ```css title="src/styles/global.css" ins={23-100}
@@ -184,7 +184,7 @@ Dado que su sitio se verá en distintos dispositivos, creemos una navegación de
     }
     ```
 
-Cambie el tamaño de la ventana y compruebe si se aplican diferentes estilos a diferentes anchos de pantalla. Su header es ahora **responsive** al tamaño de la pantalla mediante el uso de `@media` queries.
+Cambia el tamaño de la ventana y comprueba si se aplican diferentes estilos a diferentes anchos de pantalla. Tu header es ahora **responsivo** al tamaño de la pantalla mediante el uso de `@media` queries.
 
 
 
