--- a/src/content/docs/es/tutorial/3-components/4.mdx
+++ b/src/content/docs/es/tutorial/3-components/4.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-title: Envíe su primer script al navegador
+title: Envía tu primer script al navegador
 i18nReady: true
 description: >-
   Tutorial: Crea tu primer blog Astro —
 
-  Añada interactividad del lado del cliente a su navegación móvil con un script Astro
+  Añade interactividad del lado del cliente a tu navegación móvil con un script Astro
 ---
 import Badge from '~/components/Badge.astro';
 import Blanks from '~/components/tutorial/Blanks.astro';
@@ -20,18 +20,18 @@ Añadamos un menú hamburguesa para abrir y cerrar los enlaces en pantallas de d
 
 <PreCheck>
   - Crear un componente de menú de hamburguesa
-  - Escriba un `<script>` para que los visitantes de su sitio puedan abrir y cerrar el menú de navegación
-  - Mueva su JavaScript a su archivo `.js`.
+  - Escribe un `<script>` para que los visitantes de tu sitio puedan abrir y cerrar el menú de navegación
+  - Mueve tu JavaScript a un archivo `.js`.
 </PreCheck>
 
-## Construir un hamburger component
+## Construir un componente hamburger
 
-Cree un componente `<Hamburger />` para abrir y cerrar su menú móvil.
+Crea un componente `<Hamburger />` para abrir y cerrar tu menú móvil.
 
 1. Crea un archivo llamado `Hamburger.astro` en `src/components/`.
   
 
-2. Copie el siguiente código en su componente. Esto representará tu menú "hamburguesa" de 3 líneas para abrir y cerrar tus enlaces de navegación en móvil. (Añadirás los nuevos estilos CSS a `global.css` más tarde).
+2. Copia el siguiente código en tu componente. Esto representará tu menú "hamburguesa" de 3 líneas para abrir y cerrar tus enlaces de navegación en móvil. (Añadirás los nuevos estilos CSS a `global.css` más tarde).
 
     ```astro title="src/components/Hamburger.astro"
     --- 
@@ -43,7 +43,7 @@ Cree un componente `<Hamburger />` para abrir y cerrar su menú móvil.
     </div>
     ```
 
-3. Coloque este nuevo componente `<Hamburger />` justo antes de su componente `<Navigation />` en `Header.astro`. 
+3. Coloca este nuevo componente `<Hamburger />` justo antes de tu componente `<Navigation />` en `Header.astro`. 
 
 <details>
 <summary>¡Enséñame el código!</summary>
@@ -62,7 +62,7 @@ import Navigation from './Navigation.astro';
 ```
 </details>
 
-4. Añada los siguientes estilos para su componente Hamburger:
+4. Añade los siguientes estilos para tu componente Hamburger:
 
   ```css title="src/styles/global.css" ins={2-13, 56-58}
   /* nav styles */
@@ -127,7 +127,7 @@ import Navigation from './Navigation.astro';
   ```
 
 
-## Escriba su primera etiqueta de script
+## Escribe tu primera etiqueta de script
 
 Tu header aún no es **interactivo** porque no puede responder a la entrada del usuario, como hacer clic en el menú hamburguesa para mostrar u ocultar los enlaces de navegación. 
 
@@ -145,9 +145,9 @@ La adición de una etiqueta `<script>` proporciona JavaScript del lado del clien
     </body>
     ```
 
-2. Compruebe de nuevo la vista previa del navegador en varios tamaños y verifique que el menú de navegación funciona, que es responsive al tamaño de la pantalla y que responde a las entradas del usuario en esta página.
+2. Comprueba de nuevo la vista previa del navegador en varios tamaños y verifique que el menú de navegación funciona, que es responsivo al tamaño de la pantalla y que responde a las entradas del usuario en esta página.
 
-### Importar un archivo `.js
+### Importar un archivo `.js`
 
 En lugar de escribir JavaScript directamente en cada página, puede mover el contenido de la etiqueta `<script>` a su propio archivo `.js` en el proyecto.
 
@@ -160,7 +160,7 @@ En lugar de escribir JavaScript directamente en cada página, puede mover el con
     });
     ```
 
-2. Sustituya el contenido de la etiqueta `<script>` en `index.astro` por la siguiente importación de archivos:
+2. Sustituye el contenido de la etiqueta `<script>` en `index.astro` por la siguiente importación de archivos:
 
     ```astro title="src/pages/index.astro" ins={7} del={3-5}
       <Footer />
@@ -174,10 +174,10 @@ En lugar de escribir JavaScript directamente en cada página, puede mover el con
     </body>
     ```
 
-3. Compruebe de nuevo la vista previa del navegador a un tamaño más pequeño y verifique que el menú hamburguesa sigue abriendo y cerrando los enlaces de navegación. 
+3. Comprueba de nuevo la vista previa del navegador a un tamaño más pequeño y verifique que el menú hamburguesa sigue abriendo y cerrando los enlaces de navegación. 
 
 
-4. Añade el mismo `<script>` con import a tus otras dos páginas, `about.astro` y `blog.astro` y comprueba que tienes un header responsive e interactivo en cada página.
+4. Añade el mismo `<script>` con import a tus otras dos páginas, `about.astro` y `blog.astro` y comprueba que tienes un header responsivo e interactivo en cada página.
 
      ```astro title="src/pages/about.astro & src/pages/blog.astro" ins={2-4}
       <Footer />
@@ -188,13 +188,13 @@ En lugar de escribir JavaScript directamente en cada página, puede mover el con
     ```
 
 :::note[takeaway]
-Anteriormente había utilizado JavaScript para construir partes de su sitio:
+Anteriormente había utilizado JavaScript para construir partes de tu sitio:
 
 - Definir dinámicamente el título y la cabecera de la página
 - Mapeo a través de una lista de competencias en la página Acerca de
 - Visualización condicional de elementos HTML
 
-Todos esos comandos se ejecutan en tiempo de compilación para crear HTML estático para su sitio, y luego el código se "tira". 
+Todos esos comandos se ejecutan en tiempo de compilación para crear HTML estático para tu sitio, y luego el código se "tira". 
 
 **El JavaScript de una etiqueta `<script>` se envía al navegador** y está disponible para ejecutarse en función de las interacciones del usuario, como actualizar una página o cambiar una entrada.
 :::
