--- a/src/content/docs/es/tutorial/3-components/index.mdx
+++ b/src/content/docs/es/tutorial/3-components/index.mdx
@@ -5,7 +5,7 @@ title: 'Check in: Unidad 3 - Componentes'
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
-  Cree componentes Astro para reutilizar el código de los elementos comunes de su sitio web.
+  Crea componentes Astro para reutilizar el código de los elementos comunes de tu sitio web.
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
