--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-title: Crear un pie de página para redes sociales
+title: Crea un pie de página para redes sociales
 i18nReady: true
 description: |-
   Tutorial: Crea tu primer blog Astro —
-  Cree un nuevo componente desde cero y añádalo a sus páginas
+  Crea un nuevo componente desde cero y añádalo a sus páginas
 ---
 import Checklist from '~/components/Checklist.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -15,17 +15,17 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Crear un componente de pie de página
-  - Crear y pasar props a un componente de medios sociales
+  - Crea un componente de pie de página
+  - Crea y pasa props a un componente de medios sociales
 </PreCheck>
 
 Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un componente dentro de otro componente.
 
-## Crear un componente de pie de página
+## Crea un componente de pie de página
 
 1. Crea un nuevo archivo en la ubicación `src/components/Footer.astro`.
 
-2. Copie el siguiente código en su nuevo archivo, `Footer.astro`.
+2. Copia el siguiente código en tu nuevo archivo, `Footer.astro`.
 
     ```astro title="src/components/Footer.astro"
     ---
@@ -38,7 +38,7 @@ Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un
     </footer>
     ```
 
-### Importar y utilizar `Footer.astro`
+### Importa y utiliza `Footer.astro`
 
 1. Añade la siguiente sentencia import al frontmatter de cada una de tus tres páginas Astro (`index.astro`, `about.astro`, y `blog.astro`):
 
@@ -54,11 +54,11 @@ Ahora que ya has utilizado componentes Astro en una página, vamos a utilizar un
     </html>
     ```
 
-3. En la vista previa de su navegador, compruebe que puede ver el nuevo texto del pie de página en cada página.
+3. En la vista previa de tu navegador, comprueba que puede ver el nuevo texto del pie de página en cada página.
 
 <Box icon="puzzle-piece">
 
-## Pruébelo usted mismo - Personalice su pie de página
+## Pruébalo tu mismo - Personaliza tu pie de página
 
 Personaliza tu pie de página para mostrar varias redes sociales (por ejemplo, Instagram, Twitter, LinkedIn) e incluye tu nombre de usuario para enlazar directamente con tu propio perfil.
 
@@ -92,7 +92,7 @@ const pageTitle = 'Página de inicio';
 </html>
 ```
 
-## Crear un componente de medios sociales
+## Crea un componente de medios sociales
 
 Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un único componente reutilizable y mostrarlo varias veces. Cada vez, le pasarás diferentes propiedades (`props`) para que las use: la plataforma online y tu nombre de usuario allí.
 
@@ -107,7 +107,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
     <a href={`https://www.${platform}.com/${username}`}>{platform}</a>
     ```
 
-### Importar y utilizar `Social.astro` en el pie de página
+### Importa y utiliza `Social.astro` en el pie de página
 
 1. Cambia el código en `src/components/Footer.astro` para importar, luego usa este nuevo componente tres veces, pasando diferentes **atributos de componente** como props cada vez:
 
@@ -126,7 +126,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
     </footer>
     ```
 
-2. Compruebe la vista previa de su navegador, y debería ver su nuevo pie de página mostrando enlaces a estas tres plataformas en cada página.
+2. Comprueba la vista previa de tu navegador y deberías ver tu nuevo pie de página mostrando enlaces a estas tres plataformas en cada página.
 
 ## Estiliza tu componente de redes sociales
 
@@ -148,7 +148,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
     </style>
     ```
 
-2. Añade una etiqueta `<style>` a `src/components/Footer.astro` para mejorar el layout de su contenido.
+2. Añade una etiqueta `<style>` a `src/components/Footer.astro` para mejorar el layout de tu contenido.
 
     ```astro title="src/components/Footer.astro" ins={4-10}
     ---
@@ -169,7 +169,7 @@ Dado que puedes tener varias cuentas online a las que enlazarte, puedes crear un
     </footer>
     ```
 
-3. Compruebe de nuevo la vista previa de su navegador y confirme que cada página muestra un pie de página actualizado.
+3. Comprueba de nuevo la vista previa de tu navegador y confirme que cada página muestra un pie de página actualizado.
 
 <Box icon="question-mark">
 
