--- a/src/content/docs/en/guides/deploy/kinsta.mdx
+++ b/src/content/docs/en/guides/deploy/kinsta.mdx
@@ -7,18 +7,19 @@ i18nReady: true
 
 You can use [Kinsta Application Hosting](https://kinsta.com/application-hosting/) to host an Astro site on their cloud hosting.
 
+## Static hosting
 :::tip[Looking for an example?]
 Check out [the official Kinsta Application Hosting Starter project for Astro](https://github.com/kinsta/hello-world-astro)!
 :::
 
-## Configuring your Astro project
+### Configuring your Astro project
 To host your project on **Kinsta Application Hosting**, you need to:
 - Include a `name` field in your `package.json`. (This can be anything, and will not affect your deployment.)
 - Include a `build` script in your `package.json`. (Your Astro project should already include this.)
 - Install the [`serve`](https://www.npmjs.com/package/serve) package and set the `start` script to `serve dist/`.
 
 Here are the necessary lines in your `package.json` file:
-```json title="package.json" {2,6} ins={12} "serv dist/"
+```json title="package.json" {2,5,6} ins={12} "serv dist/"
 {
   "name": "anything", // This is required, but the value does not matter.
   "scripts": {
@@ -29,9 +30,54 @@ Here are the necessary lines in your `package.json` file:
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.10",
+    "astro": "^2.2.0",
     "serve": "^14.0.1"
   },
+}
+```
+
+## SSR
+:::tip[Looking for an example?]
+Check out [the official Kinsta Application Hosting Starter project for Astro SSR](https://github.com/kinsta/hello-world-astro-ssr)!
+:::
+
+### Configuring your Astro project
+To host your project on **Kinsta Application Hosting**, you need to:
+- Include a `name` field in your `package.json`. (This can be anything, and will not affect your deployment.)
+- Include a `build` script in your `package.json`. (Your Astro project should already include this.)
+- Install the [`@astrojs/node`](https://www.npmjs.com/package/@astrojs/node) package and set the `start` script to `node ./dist/server/entry.mjs`.
+- Set the `astro.config.mjs` to use `@astrojs/node` and to use `host: true`
+
+Here are the necessary lines in your `package.json` file:
+```json title="package.json" {2,5,6} ins={12} "node ./dist/server/entry.mjs"
+{
+  "name": "anything", // This is required, but the value does not matter.
+  "scripts": {
+    "dev": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "astro": "^2.2.0",
+    "@astrojs/node": "^5.1.1"
+  },
+}
+```
+
+Here are the necessary lines in your `astro.config.mjs` file:
+```json title="astro.config.mjs"
+{
+  export default defineConfig({
+	  output: 'server',
+	  adapter: node({
+		  mode: "standalone"
+	  }),
+	  server: {
+		  host: true
+	  }
+});
 }
 ```
 
