--- a/src/content/docs/en/guides/deploy/kinsta.mdx
+++ b/src/content/docs/en/guides/deploy/kinsta.mdx
@@ -67,18 +67,19 @@ Here are the necessary lines in your `package.json` file:
 ```
 
 Here are the necessary lines in your `astro.config.mjs` file:
-```json title="astro.config.mjs"
-{
+```js title="astro.config.mjs"
+  import { defineConfig } from 'astro/config';
+  import node from "@astrojs/node";
+
   export default defineConfig({
-	  output: 'server',
-	  adapter: node({
-		  mode: "standalone"
-	  }),
-	  server: {
-		  host: true
-	  }
-});
-}
+    output: 'server',
+    adapter: node({
+      mode: "standalone"
+    }),
+    server: {
+      host: true
+    }
+  });
 ```
 
 ## How to deploy
