--- a/src/content/docs/en/recipes/external-links.mdx
+++ b/src/content/docs/en/recipes/external-links.mdx
@@ -5,10 +5,10 @@ i18nReady: false
 type: recipe
 ---
 
-Using a rehype plugin, you can identify links in your markdown files that point to external sites and modify them. This includes adding icons to the end of each link.
+Using a rehype plugin, you can identify links in your Markdown files that point to external sites and modify them. This example adds icons to the end of each external link, so that visitors will know they are leaving your site.
 
 ## Prerequisites
-- A project using Markdown for content pages.
+- An Astro project using Markdown for content pages.
 
 ## Recipe
 
@@ -18,7 +18,9 @@ Using a rehype plugin, you can identify links in your markdown files that point 
     npm install rehype-external-links
     ```
 
-2. Import the plugin into your `astro.config.mjs` file. Pass it to the `rehypePlugins` array, along with an options object. Add a content property and set its `type` to `text` if you want to add plain text to the end of the link, or `raw` to add HTML to the end of the link.
+2. Import the plugin into your `astro.config.mjs` file. 
+
+	Pass `rehypeExternalLinks` to the `rehypePlugins` array, along with an options object that includes a content property. Set this property's `type` to `text` if you want to add plain text to the end of the link. To add HTML to the end of the link instead, set the property `type` to	`raw`.
 
     ```ts
     // ...
