Update #support channel name

--- a/src/content/docs/de/guides/troubleshooting.mdx
+++ b/src/content/docs/de/guides/troubleshooting.mdx
@@ -201,7 +201,7 @@ const answer = sum(2, 4);
 
 ## Brauchst du mehr?
 
-Komm und chatte mit uns auf [Discord](https://astro.build/chat) und erkläre dein Problem im Channel "#support-threads". Wir helfen dir immer gerne!
+Komm und chatte mit uns auf [Discord](https://astro.build/chat) und erkläre dein Problem im Channel "#support". Wir helfen dir immer gerne!
 
 Besuche die aktuellen [offenen Tickets in Astro](https://github.com/withastro/astro/issues/), um zu sehen, ob dein Problem bereits bekannt ist. Andernfalls kannst du einen Fehlerbericht einreichen.
 
