--- a/src/content/docs/es/guides/troubleshooting.mdx
+++ b/src/content/docs/es/guides/troubleshooting.mdx
@@ -204,7 +204,7 @@ const respuesta = sum(2, 4);
 
 ## ¿Necesitas más ayuda?
 
-Ven a conversar con nosotros en [Discord](https://astro.build/chat) y explícanos tu problema en el canal `#support-threads`. ¡Estaremos felices de ayudarte!
+Ven a conversar con nosotros en [Discord](https://astro.build/chat) y explícanos tu problema en el canal `#support`. ¡Estaremos felices de ayudarte!
 
 Visita los [Issues abiertos en Astro](https://github.com/withastro/astro/issues/) para ver si encuentras un problema conocido o para crear un reporte de bug.
 
