--- a/src/content/docs/ja/guides/troubleshooting.mdx
+++ b/src/content/docs/ja/guides/troubleshooting.mdx
@@ -185,7 +185,7 @@ const answer = sum(2, 4);
 
 ## もっと知りたい？
 
-[Discord](https://astro.build/chat)の`#support-threads`チャンネルで、問題を説明してください。私たちはいつでも喜んでお手伝いします！
+[Discord](https://astro.build/chat)の`#support`チャンネルで、問題を説明してください。私たちはいつでも喜んでお手伝いします！
 
 現在の[アストロの未解決問題](https://github.com/withastro/astro/issues/)にアクセスして、既知の問題に遭遇しているかどうかを確認したり、バグレポートを提出したりできます。
 
