--- a/src/content/docs/pt-br/guides/troubleshooting.mdx
+++ b/src/content/docs/pt-br/guides/troubleshooting.mdx
@@ -201,7 +201,7 @@ const answer = soma(2, 4);
 
 ## Precisa de mais?
 
-Venha e fale conosco no [Discord](https://astro.build/chat) e explique seu problema no canal `#support-threads`. Nós estamos sempre felizes em ajudar!
+Venha e fale conosco no [Discord](https://astro.build/chat) e explique seu problema no canal `#support`. Nós estamos sempre felizes em ajudar!
 
 Visite os atuais [issues abertos no Astro](https://github.com/withastro/astro/issues/) para ver se você está enfrentando um problema conhecido ou para reportar um bug.
 
