Add accessibility note

--- a/src/content/docs/en/recipes/external-links.mdx
+++ b/src/content/docs/en/recipes/external-links.mdx
@@ -5,7 +5,7 @@ i18nReady: false
 type: recipe
 ---
 
-Using a rehype plugin, you can identify links in your Markdown files that point to external sites and modify them. This example adds icons to the end of each external link, so that visitors will know they are leaving your site.
+Using a rehype plugin, you can identify and modify links in your Markdown files that point to external sites. This example adds icons to the end of each external link, so that visitors will know they are leaving your site.
 
 ## Prerequisites
 - An Astro project using Markdown for content pages.
@@ -21,6 +21,10 @@ Using a rehype plugin, you can identify links in your Markdown files that point 
 2. Import the plugin into your `astro.config.mjs` file. 
 
 	Pass `rehypeExternalLinks` to the `rehypePlugins` array, along with an options object that includes a content property. Set this property's `type` to `text` if you want to add plain text to the end of the link. To add HTML to the end of the link instead, set the property `type` to	`raw`.
+
+  :::note
+    The value of the `content` property is [not represented in the accessibility tree](https://developer.mozilla.org/en-US/docs/Web/CSS/content#accessibility_concerns). As such, it's best to make clear that the link is external in the surrounding content, rather than relying on the icon alone.
+  :::
 
     ```ts
     // ...
