--- a/src/content/docs/es/guides/troubleshooting.mdx
+++ b/src/content/docs/es/guides/troubleshooting.mdx
@@ -35,7 +35,7 @@ Los componentes de framework se ejecutan en el servidor por defecto, por lo que 
 
 - Si el código está en un componente de Astro, muévelo a una etiqueta `<script>` fuera del frontmatter. Esto le dice a Astro que ejecute este código en el cliente, donde `document` y `window` están disponibles.
 
-- Si el código está en un componente de framework, intenta acceder a estos objetos después de la renderización usando métodos de ciclo de vida (por ejemplo, [`useEffect()`](https://es.reactjs.org/docs/hooks-reference.html#useeffect) en React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) en Vue, y [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) en Svelte). También puedes evitar que el componente se renderice en el servidor agregando la directiva [`client:only`](/es/reference/directives-reference/#clientonly).
+- Si el código está en un componente de framework, intenta acceder a estos objetos después de la renderización usando métodos de ciclo de vida (por ejemplo, [`useEffect()`](https://react.dev/reference/react/useEffect) en React, [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) en Vue, y [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) en Svelte). También puedes evitar que el componente se renderice en el servidor agregando la directiva [`client:only`](/es/reference/directives-reference/#clientonly).
 
 **Estado**: Comportamiento esperado de Astro.
 
