--- a/src/content/docs/en/reference/integrations-reference.mdx
+++ b/src/content/docs/en/reference/integrations-reference.mdx
@@ -315,7 +315,7 @@ The address, family and port number supplied by the [NodeJS Net module](https://
 
 **When:** After a production SSR build has completed.
 
-**Why:** To get access the SSR manifest, this is useful when creating custom SSR builds in plugins or integrations.
+**Why:** To get access to the SSR manifest, this is useful when creating custom SSR builds in plugins or integrations.
 
 ```js
 'astro:build:ssr'?: (options: { manifest: SerializedSSRManifest }) => void | Promise<void>;
