--- a/src/content/docs/en/tutorial/2-pages/2.mdx
+++ b/src/content/docs/en/tutorial/2-pages/2.mdx
@@ -47,7 +47,7 @@ Now that you have built pages using `.astro` files, let's make some blog posts u
     description: 'This is the first post of my new Astro blog.'
     author: 'Astro Learner'
     image:
-        url: 'https://astro.build/assets/press/full-logo-light.png' 
+        url: 'https://docs.astro.build/assets/full-logo-light.png' 
         alt: 'The full Astro logo.'
     tags: ["astro", "blogging", "learning in public"]
     ---
@@ -112,7 +112,7 @@ The information at the top of the file, inside the code fences, is called frontm
     author: Astro Learner
     description: "After learning some Astro, I couldn't stop!"
     image: 
-        url: "https://astro.build/assets/wallpapers/thumbs/desktop/arc.webp"
+        url: "https://docs.astro.build/assets/arc.webp"
         alt: "Thumbnail of Astro arcs,"
     pubDate: 2022-07-08
     tags: ["astro", "blogging", "learning in public", "successes"]
@@ -126,7 +126,7 @@ The information at the top of the file, inside the code fences, is called frontm
     author: Astro Learner
     description: "I had some challenges, but asking in the community really helped!"
     image: 
-        url: "https://astro.build/assets/wallpapers/thumbs/desktop/rays.webp"
+        url: "https://docs.astro.build/assets/rays.webp"
         alt: "Thumbnail of Astro rays."
     pubDate: 2022-07-15
     tags: ["astro", "learning in public", "setbacks", "community"]
