Fix folder name, switch back to webp
- Rename folder to `assets`
- Switch back to `webp` for arc and rays wallpapers

--- a/src/content/docs/en/tutorial/2-pages/2.mdx
+++ b/src/content/docs/en/tutorial/2-pages/2.mdx
@@ -112,7 +112,7 @@ The information at the top of the file, inside the code fences, is called frontm
     author: Astro Learner
     description: "After learning some Astro, I couldn't stop!"
     image: 
-        url: "https://docs.astro.build/assets/arc.png"
+        url: "https://docs.astro.build/assets/arc.webp"
         alt: "Thumbnail of Astro arcs,"
     pubDate: 2022-07-08
     tags: ["astro", "blogging", "learning in public", "successes"]
@@ -126,7 +126,7 @@ The information at the top of the file, inside the code fences, is called frontm
     author: Astro Learner
     description: "I had some challenges, but asking in the community really helped!"
     image: 
-        url: "https://docs.astro.build/assets/rays.png"
+        url: "https://docs.astro.build/assets/rays.webp"
         alt: "Thumbnail of Astro rays."
     pubDate: 2022-07-15
     tags: ["astro", "learning in public", "setbacks", "community"]
