feat: migrate page translation

--- a/src/content/docs/ru/guides/cms.mdx
+++ b/src/content/docs/ru/guides/cms.mdx
@@ -13,7 +13,7 @@ import CMSGuidesNav from '~/components/CMSGuidesNav.astro';
 
 <CMSGuidesNav />
 
-Обратите внимание, что многие из этих страниц являются заглушками: это сборники ресурсов, ожидающих вашего вклада!
+Обратите внимание, что многие из этих страниц являются **заглушками**: это сборники ресурсов, ожидающих вашего вклада!
 
 ## Зачем использовать CMS?
 
