--- a/src/content/docs/ja/guides/styling.mdx
+++ b/src/content/docs/ja/guides/styling.mdx
@@ -441,7 +441,7 @@ Astroは、[Vite][vite-preprocessors]を通じて、[Sass][sass]、[Stylus][styl
 
 ### SassとSCSS
 
- ```
+ ```shell
  npm install sass
  ```
 
@@ -449,14 +449,14 @@ Astroは、[Vite][vite-preprocessors]を通じて、[Sass][sass]、[Stylus][styl
 
 ### Stylus
 
-```
+ ```shell
 npm install stylus
 ```
 `.astro`ファイルで`<style lang="styl">`または`<style lang="stylus">`を使用します。
 
 ### Less
 
-```
+ ```shell
 npm install less
 ```
 `.astro`ファイルで`<style lang="less">`を使用します。
