fix: broken links

--- a/src/content/docs/ru/guides/deploy.mdx
+++ b/src/content/docs/ru/guides/deploy.mdx
@@ -57,7 +57,7 @@ import DeployGuidesNav from '~/components/DeployGuidesNav.astro';
     :::
 
 
-    Другие хостинг-провайдеры могут потребовать от вас [сборки вашего сайта локально](#building-your-site-locally) и развертывания с помощью командной строки..
+    Другие хостинг-провайдеры могут потребовать от вас [сборки вашего сайта локально](#сборка-сайта-локально) и развертывания с помощью командной строки..
 
 ## Сборка сайта локально
 
