--- a/src/content/docs/ru/guides/migrate-to-astro.mdx
+++ b/src/content/docs/ru/guides/migrate-to-astro.mdx
@@ -25,7 +25,7 @@ Astro обеспечивает множество преимуществ: про
 
 - [CSS стили или библиотеки](/ru/guides/styling/) включая Tailwind.
 
-- [Markdown/MDX файлы](/ru/guides/markdown-content/), настроенные с использованием ваших существующих [remark and rehype плагинов](/ru/guides/markdown-content/#configuring-markdown-and-mdx).
+- [Markdown/MDX файлы](/ru/guides/markdown-content/), настроенные с использованием ваших существующих [remark and rehype плагинов](/ru/guides/markdown-content/#markdown-и-mdx-страницы).
 
 - [Контент из CMS](/ru/guides/cms/) через интеграцию или API.
 
@@ -40,7 +40,7 @@ Astro позволяет выбирать между статически ген
 
 В зависимости от вашего существующего проекта, вам может потребоваться мыслить иначе в отношении:
 
-- Проектирование в [Astro Islands](/ru/concepts/islands/#what-is-an-astro-island) чтобы избежать отправки ненужного JavaScript в браузер.
+- Проектирование в [Astro Islands](/ru/concepts/islands/#что-такое-astro-остров) чтобы избежать отправки ненужного JavaScript в браузер.
 
 - Предоставление клиентской интерактивности с помощью [тегов `<script>` для клиентской части](/ru/guides/client-side-scripts/) или [компонентов UI фреймворка](/ru/core-concepts/framework-components/).
 
