--- a/src/content/docs/es/tutorial/2-pages/5.mdx
+++ b/src/content/docs/es/tutorial/2-pages/5.mdx
@@ -147,9 +147,9 @@ Tu página Acerca de ahora tiene estilo usando *ambos* el archivo importado `glo
 ### Recursos
 - [Comparación entre la sintaxis Astro y JSX](/es/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
 
-- [Etiqueta Astro `<style>`.](/es/guides/styling/#styling-in-astro)
+- [Etiqueta Astro `<style>`.](/es/guides/styling/#estilando-en-astro)
 
-- [Variables CSS en Astro](/es/guides/styling/#css-variables)
+- [Variables CSS en Astro](/es/guides/styling/#variables-de-css)
 
 
 
