--- a/src/content/docs/es/tutorial/5-astro-api/2.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/2.mdx
@@ -163,7 +163,7 @@ Sus páginas de etiquetas se definen ahora estáticamente en `[tag].astro`. Si a
 El siguiente ejemplo muestra cómo sustituir el código de esta página por un código que buscará automáticamente y generará páginas para cada etiqueta utilizada en las páginas de su blog.
 
 :::note
-Aunque parezca un reto, puedes intentar seguir los pasos para construir esta función por ti mismo. Si no quieres caminar a través del JavaScript requerido en este momento, puedes saltar a la [versión final del código](#final-code-sample) y usarlo directamente en tu proyecto, reemplazando el contenido existente.
+Aunque parezca un reto, puedes intentar seguir los pasos para construir esta función por ti mismo. Si no quieres caminar a través del JavaScript requerido en este momento, puedes saltar a la [versión final del código](#ejemplo-de-código-final) y usarlo directamente en tu proyecto, reemplazando el contenido existente.
 :::
 
 ### 1. Compruebe que todas las entradas de su blog contienen etiquetas
@@ -322,6 +322,6 @@ Elija el término que corresponda a la descripción.
 
 ### Recursos
 
-- [Enrutamiento dinámico de páginas en Astro](/en/core-concepts/routing/#dynamic-routes)
+- [Enrutamiento dinámico de páginas en Astro](/es/core-concepts/routing/#dynamic-routes)
 
 - [`getStaticPaths()` API documentacion](/en/reference/api-reference/#getstaticpaths)
