fix: broken link

--- a/src/content/docs/de/guides/environment-variables.mdx
+++ b/src/content/docs/de/guides/environment-variables.mdx
@@ -46,7 +46,7 @@ DB_PASSWORD="foobar"
 PUBLIC_POKEAPI="https://pokeapi.co/api/v2"
 ```
 
-Mehr über `.env`-Dateien findest du in der Vite-Dokumentation (https://vitejs.dev/guide/env-and-mode.html#env-files).
+Mehr über `.env`-Dateien findest du in der [Vite-Dokumentation](https://vitejs.dev/guide/env-and-mode.html#env-files).
 
 ### Verwendung der Kommandozeilenschnittstelle (CLI)
 Du kannst auch Umgebungsvariablen hinzufügen, während du dein Projekt ausführst:
