--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -34,3 +34,15 @@ Astro builds on top of Vite, and supports both Vite and Rollup plugins. This rec
     ```js
     import yml from './data.yml';
     ```
+
+    :::note
+    While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create a `*.d.ts` file in your project and add the following:
+    ```ts
+    // specify the file extension you want to import
+    declare module "*.yml" {
+      const value: any; // Add better type definitions here if desired
+      export default value;
+    }
+    ```
+    This will allow your editor to provide type hints for your YAML data.
+    :::
