i18n(zh-cn): update typescript.mdx
#### What kind of changes does this PR include?
New or updated content
#### Description
update typescript.mdx

--- a/src/content/docs/zh-cn/guides/typescript.mdx
+++ b/src/content/docs/zh-cn/guides/typescript.mdx
@@ -82,6 +82,31 @@ import Layout from '@layouts/Layout.astro';
 }
 ```
 
+## 扩展 `window` and `globalThis`
+
+您可能需要在全局对象中添加一项属性。您可以在 `env.d.ts` 文件中添加全局声明来实现这一点：
+
+```ts title="env.d.ts"
+declare global {
+	var myString: string;
+	function myFunction(): boolean;
+}
+
+export {};
+```
+
+这将为 `globalThis.myString` 和 `globalThis.myFunction` 以及 `window.myString` 和 `window.myFunction`提供类型。
+
+注意， `window` 只能在客户端代码中访问。 `globalThis` 在服务器端和客户端上都可用，但服务器端值不会共享给客户端。
+
+如果您只想为 `window` 对象中的一个属性提供类型注释，可以提供一个 `window` 接口来实现：
+
+```ts title="env.d.ts"
+interface Window {
+	myFunction(): boolean;
+}
+```
+
 ## 组件参数
 
 Astro 支持通过 TypeScript 来定义你的组件参数。为了启动它，你需要将一个名为 `Props` 的 TypeScript 接口添加到你的的组件。你可以（可选的）使用 `export` 语句将其导出，但这不是强制的。[Astro VSCode 扩展](/zh-cn/editor-setup/)会自动寻找 `Props` 接口，并且当你在其他模板内使用该组件时，给你提供适当的 TS 支持。
