--- a/src/content/docs/ja/guides/styling.mdx
+++ b/src/content/docs/ja/guides/styling.mdx
@@ -124,7 +124,7 @@ const backgroundColor = "rgb(24 121 78)";
     color: var(--foregroundColor);
   }
 </style>
-<h1>Hello</h1>
+<h1>こんにちは</h1>
 ```
 
 📚 `define:vars`については、[ディレクティブのリファレンス](/ja/reference/directives-reference/#definevars)のページをご覧ください。
