Apply suggestions from code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/recipes/add-yaml-support.mdx
+++ b/src/content/docs/en/recipes/add-yaml-support.mdx
@@ -36,9 +36,9 @@ Astro builds on top of Vite, and supports both Vite and Rollup plugins. This rec
     ```
 
     :::note
-    While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create a `*.d.ts` file in your project and add the following:
+    While you can now import YAML data in your Astro project, your editor will not provide types for the imported data. To add types, create a `*.d.ts` file in the `src` directory of your project and add the following:
     ```ts
-    // specify the file extension you want to import
+    // Specify the file extension you want to import
     declare module "*.yml" {
       const value: any; // Add better type definitions here if desired
       export default value;
